# OSCEGuide-backend

./: .gitignore  README.md  app.py  cloudflaressl.key  cloudflaressl.pem  osceguide.pem  pyproject.toml
config/: constants.py  helpers.py  prompts.py
config/ai_clients/: aiclients_config.py
config/firestore/: firestore_config.py
models/bookings/: BookingModel.py
models/feedbacks/: FeedbackModel.py
models/messages/: MessagesModel.py
models/mocks/: MockModel.py
models/stations/: StationModel.py
models/transcripts/: TranscriptModel.py
models/users/: UserModel.py
routes/bookings/: bookings_routes.py
routes/feedbacks/: feedbacks_routes.py
routes/messages/: messages_routes.py
routes/mocks/: mocks_routes.py
routes/stations/: stations_routes.py
routes/transcripts/: transcripts_routes.py
routes/users/: users_route.py
templates/: new_message_email.html  reset_password_email.html
